# GTK_cmake_template

./: CMakeLists.txt  README.md  main.c
